[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/dialog_maker/icons/DeleteIcon.svg" type="Texture" id=1]
[ext_resource path="res://addons/dialog_maker/scripts/tree_editor/condition_panel.gd" type="Script" id=2]

[node name="ConditionPanel" type="PanelContainer"]
margin_right = 288.0
margin_bottom = 38.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 281.0
margin_bottom = 31.0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_top = 5.0
margin_right = 9.0
margin_bottom = 19.0
text = "If"

[node name="PropertyOptionButton" type="OptionButton" parent="HBoxContainer"]
margin_left = 13.0
margin_right = 101.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="ComparatorOptionButton" type="OptionButton" parent="HBoxContainer"]
margin_left = 105.0
margin_right = 150.0
margin_bottom = 24.0
text = "=="
items = [ "==", null, false, 0, null, "!=", null, false, 1, null, "<", null, false, 2, null, ">", null, false, 3, null, "<=", null, false, 4, null, ">=", null, false, 5, null ]
selected = 0

[node name="ValueLineEdit" type="LineEdit" parent="HBoxContainer"]
margin_left = 154.0
margin_right = 242.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Value"

[node name="DeleteButton" type="Button" parent="HBoxContainer"]
margin_left = 246.0
margin_right = 274.0
margin_bottom = 24.0
icon = ExtResource( 1 )
[connection signal="item_selected" from="HBoxContainer/PropertyOptionButton" to="." method="on_edit"]
[connection signal="item_selected" from="HBoxContainer/ComparatorOptionButton" to="." method="on_edit"]
[connection signal="text_changed" from="HBoxContainer/ValueLineEdit" to="." method="on_edit"]
